BUG FIX - on login success notification was mis-aligned

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,6 +37,10 @@ li {
 	margin: 0 auto;
 }
 
+.alert.alert-notice {
+	position: relative;
+}
+
 /* Add-this share box */
 
 .add-this {
